<resources>
    <string name="app_name">Cert UPB 2023</string>
    <string name="login_options_message">Bienvenido/a a tu <b>publicidad Online!</b></string>
    <string name="login_options_continue_with">Para continuar, se requiere iniciar sesion:</string>
    <string name="login_options_register">Registrarme</string>
    <string name="terms_and_conditions_title">Terminos y condiciones</string>
    <string name="terms_and_conditions_message">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="terms_and_conditions_button_accept">Aceptar</string>
    <string name="terms_and_conditions_button_decline">Rechazar</string>
    <string name="register_title">Crea tu cuenta</string>
    <string name="register_button">Crear cuenta</string>
    <string name="register_hint_username">Nombre de usuario</string>
    <string name="register_hint_email">Correo</string>
    <string name="register_hint_password">Contraseña</string>
    <string name="register_hint_password_confirm">Confirmar Contraseña</string>
    <string name="register_toast_password_error">Passwords don\'t match!</string>
    <string name="register_toast_password_empty">Password can\'t be empty!</string>
    <string name="register_toast_user_empty">Username or email can\'t be empty!</string>
    <string name="register_wrong_passsword">Las contraseñas no coinciden!</string>
    <string name="welcome_title">Bienvenid@ %s</string>
    <string name="story_view_offer">Ver Oferta</string>
    <string name="profile_title">Hey %s, este es tu perfil!</string>
    <string name="profile_logout">Cerrar sesion</string>
    <string name="my_store_hint_store_name">Nombre Comercio:</string>
    <string name="my_store_hint_address">Direccion:</string>
    <string name="my_store_hint_phone">Telefono:</string>
    <string name="my_store_button_update">Actualizar</string>
    <string name="login_options_login">Iniciar Sesion</string>
    <string name="login_button">Iniciar Sesion</string>
    <string name="login_title">Iniciar Sesion</string>
</resources>