<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <import type="android.view.View"/>

        <variable
            name="user"
            type="com.upb.certupb2023.login.models.User" />
        <variable
            name="confirmPassword"
            type="java.lang.String" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <View
            android:id="@+id/view3"
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:background="?attr/colorPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="40dp"
            android:text="@string/register_title"
            android:textColor="?attr/colorOnSecondary"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/view3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ScrollView
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@+id/btnCreateAccount"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/view3">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/etUsername"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/shape_input_white"
                    android:backgroundTint="?attr/colorSurfaceVariant"
                    android:drawableStart="@drawable/ic_person"
                    android:drawablePadding="10dp"
                    android:drawableTint="?attr/colorOnSurface"
                    android:hint="@string/register_hint_username"
                    android:imeOptions="actionNext"
                    android:text="@={user.username}"
                    android:inputType="text"
                    android:maxLines="1"
                    android:padding="10dp" />

                <EditText
                    android:id="@+id/etEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/shape_input_white"
                    android:backgroundTint="?attr/colorSurfaceVariant"
                    android:drawableStart="@drawable/ic_email"
                    android:drawablePadding="10dp"
                    android:drawableTint="?attr/colorOnSurface"
                    android:hint="@string/register_hint_email"
                    android:imeOptions="actionNext"
                    android:text="@={user.email}"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:padding="10dp" />

                <EditText
                    android:id="@+id/etPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/shape_input_white"
                    android:backgroundTint="?attr/colorSurfaceVariant"
                    android:drawableStart="@drawable/ic_password"
                    android:drawablePadding="10dp"
                    android:drawableTint="?attr/colorOnSurface"
                    android:hint="@string/register_hint_password"
                    android:imeOptions="actionNext"
                    android:text="@={user.password}"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:padding="10dp" />

                <EditText
                    android:id="@+id/etConfirmPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/shape_input_white"
                    android:backgroundTint="?attr/colorSurfaceVariant"
                    android:drawableStart="@drawable/ic_password"
                    android:drawablePadding="10dp"
                    android:drawableTint="?attr/colorOnSurface"
                    android:hint="@string/register_hint_password_confirm"
                    android:imeOptions="actionDone"
                    android:text="@={confirmPassword}"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:padding="10dp" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:text="@string/register_wrong_passsword"
                    android:textColor="#F44336"
                    android:visibility='@{confirmPassword.equals(user.password) ? View.INVISIBLE : View.VISIBLE}' />
            </LinearLayout>
        </ScrollView>

        <Button
            android:id="@+id/btnCreateAccount"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_margin="20dp"
            android:background="@drawable/bkg_button"
            android:text="@string/register_button"
            app:backgroundTint="?attr/colorPrimary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>