<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="homeListItem"
            type="com.upb.certupb2023.mainscreen.models.HomeListItem" />

        <variable
            name="homeViewModel"
            type="com.upb.certupb2023.mainscreen.fragments.home.viewmodels.HomeViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".mainscreen.fragments.home.fragments.DetailsFragment">

        <include
            android:id="@+id/include2"
            layout="@layout/toolbar_collapsed"
            app:user="@{homeViewModel.user}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/ivCover"
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:elevation="5dp"
            android:outlineProvider="bounds"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/include2"
            tools:src="@tools:sample/backgrounds/scenic" />

        <ImageView
            android:id="@+id/ivLogo"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginBottom="-46dp"
            android:background="@drawable/shape_circle"
            android:elevation="6dp"
            android:outlineProvider="background"
            app:layout_constraintBottom_toBottomOf="@+id/ivCover"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:src="@tools:sample/avatars" />

        <LinearLayout
            android:id="@+id/lyTags"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:elevation="6dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/ivCover" />


        <ScrollView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:paddingTop="50dp"
            android:paddingBottom="70dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ivCover"
            app:layout_constraintVertical_bias="0.0">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/etUsername"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/shape_input_white"
                    android:backgroundTint="?attr/colorSurfaceVariant"
                    android:drawableStart="@drawable/ic_store"
                    android:drawablePadding="10dp"
                    android:drawableTint="?attr/colorOnSurface"
                    android:hint="@string/my_store_hint_store_name"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:maxLines="1"
                    android:padding="10dp" />

                <EditText
                    android:id="@+id/etEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/shape_input_white"
                    android:backgroundTint="?attr/colorSurfaceVariant"
                    android:drawableStart="@drawable/ic_map"
                    android:drawablePadding="10dp"
                    android:drawableTint="?attr/colorOnSurface"
                    android:hint="@string/my_store_hint_address"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:padding="10dp" />

                <EditText
                    android:id="@+id/etPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/shape_input_white"
                    android:backgroundTint="?attr/colorSurfaceVariant"
                    android:drawableStart="@drawable/ic_phone"
                    android:drawablePadding="10dp"
                    android:drawableTint="?attr/colorOnSurface"
                    android:hint="@string/my_store_hint_phone"
                    android:imeOptions="actionNext"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:padding="10dp" />

            </LinearLayout>
        </ScrollView>

        <Button
            android:id="@+id/btnUpdate"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_margin="20dp"
            android:background="@drawable/bkg_button"
            android:text="@string/my_store_button_update"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>